<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <org.alberto97.arpavbts.ui.PreferenceHeader />
    <Preference
            android:key="arpav"
            android:title="@string/about_data_provider">
        <intent android:action="android.intent.action.VIEW"
                android:data="https://www.arpa.veneto.it/" />
    </Preference>

    <PreferenceCategory android:title="@string/about_app_info">

        <Preference
                android:key="author"
                android:title="@string/about_author"
                android:summary="@string/about_author_fulfilling_ego">
            <intent android:action="android.intent.action.VIEW"
                    android:data="https://github.com/Alberto97" />
        </Preference>

        <Preference
                android:key="version"
                android:title="@string/about_version"
                android:summary="placeholder">
            <intent android:action="android.intent.action.VIEW"
                    android:data="https://github.com/Alberto97/arpavbts" />
        </Preference>

        <Preference
                android:key="db_version"
                android:title="@string/about_last_db_update"
                android:summary="placeholder"
                android:selectable="false"/>

    </PreferenceCategory>

</PreferenceScreen>